--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/blocks/style.min.css">
+    <link rel="stylesheet" href="css/slick.css">
     <title>Pulse</title>
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container col-lg-10 col-md-10 col-sm-10 col-xs-10 col-lg-push-1 col-md-push-1 col-sm-push-1 col-xs-push-1">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -55,9 +56,9 @@
             </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="advantages">
+    <section class="advantages">
         <div class="container col-lg-10 col-md-10 col-sm-10 col-xs-10 col-lg-push-1 col-md-push-1 col-sm-push-1 col-xs-push-1">
             <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
@@ -87,9 +88,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="consultation">
+    <section class="consultation">
         <div class="container col-lg-10 col-md-10 col-sm-10 col-xs-10 col-lg-push-1 col-md-push-1 col-sm-push-1 col-xs-push-1">
             <h2 class="title title_left">Получите бесплатную консультацию<br>
                 по подбору пульсометра </h2>
@@ -104,7 +105,269 @@
                     <button class="button button_submit">Заказать консультацию</button>
                 </form>
         </div>
-    </div>
+    </section>
+
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/watch1.png" alt="slide">
+                </div>
+                <div>
+                    <img src="img/watch2.png" alt="slide">
+                </div>
+                <div>
+                    <img src="img/watch3.png" alt="slide">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="catalog">
+        <div class="container col-lg-10 col-md-10 col-sm-10 col-xs-10 col-lg-push-1 col-md-push-1 col-sm-push-1 col-xs-push-1">
+        <h2 class="title">Каталог пульсометров</h2>
+            <ul class="catalog__tabs">
+                <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
+                <li class="catalog__tab"><div>Для бега</div></li>
+                <li class="catalog__tab"><div>Для триатлона</div></li>
+            </ul>
+        <div class="catalog__content catalog__content_active">
+            <div class="catalog-item">
+               <div class="catalog-item__wrapper">
+                   <div class="catalog-item__content catalog-item__content_active">
+                        <img src="img/puls1.png" alt="pulsometr" class="catalog-item__img">
+                        <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                        <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                        <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                   </div>
+                   <ul class="catalog-item__list">
+                        <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                        <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                        <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                        <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <a href="#" class="catalog-item__back">назад</a>
+                   </ul>
+               </div>
+                <hr>
+                <div class="catalog-item__footer">
+                    <div class="catalog-item__prices">
+                        <div class="catalog-item__old-price">4750 руб.</div>
+                        <div class="catalog-item__price">4500 руб.</div>
+                    </div>
+                    <button class="button button_mini">Купить</button>
+                </div>
+            </div>
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content catalog-item__content_active">
+                         <img src="img/puls1.png" alt="pulsometr" class="catalog-item__img">
+                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                         <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list">
+                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                         <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                 <hr>
+                 <div class="catalog-item__footer">
+                     <div class="catalog-item__prices">
+                         <div class="catalog-item__old-price">4750 руб.</div>
+                         <div class="catalog-item__price">4500 руб.</div>
+                     </div>
+                     <button class="button button_mini">Купить</button>
+                 </div>
+            </div>
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content catalog-item__content_active">
+                         <img src="img/puls1.png" alt="pulsometr" class="catalog-item__img">
+                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                         <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list">
+                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                         <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                 <hr>
+                 <div class="catalog-item__footer">
+                     <div class="catalog-item__prices">
+                         <div class="catalog-item__old-price">4750 руб.</div>
+                         <div class="catalog-item__price">4500 руб.</div>
+                     </div>
+                     <button class="button button_mini">Купить</button>
+                 </div>
+            </div>
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content catalog-item__content_active">
+                         <img src="img/puls1.png" alt="pulsometr" class="catalog-item__img">
+                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                         <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list">
+                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                         <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                 <hr>
+                 <div class="catalog-item__footer">
+                     <div class="catalog-item__prices">
+                         <div class="catalog-item__old-price">4750 руб.</div>
+                         <div class="catalog-item__price">4500 руб.</div>
+                     </div>
+                     <button class="button button_mini">Купить</button>
+                 </div>
+            </div>
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content catalog-item__content_active">
+                         <img src="img/puls1.png" alt="pulsometr" class="catalog-item__img">
+                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                         <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list">
+                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                         <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4750 руб.</div>
+                            <div class="catalog-item__price">4500 руб.</div>
+                        </div>
+                        <button class="button button_mini">Купить</button>
+                    </div>
+            </div>
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content catalog-item__content_active">
+                         <img src="img/puls1.png" alt="pulsometr" class="catalog-item__img">
+                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                         <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list">
+                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                         <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                 <hr>
+                 <div class="catalog-item__footer">
+                     <div class="catalog-item__prices">
+                         <div class="catalog-item__old-price">4750 руб.</div>
+                         <div class="catalog-item__price">4500 руб.</div>
+                     </div>
+                     <button class="button button_mini">Купить</button>
+                 </div>
+            </div>
+        </div>
+        <div class="catalog__content">
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content catalog-item__content_active">
+                         <img src="img/puls1.png" alt="pulsometr" class="catalog-item__img">
+                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                         <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list">
+                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                         <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                 <hr>
+                 <div class="catalog-item__footer">
+                     <div class="catalog-item__prices">
+                         <div class="catalog-item__old-price">4750 руб.</div>
+                         <div class="catalog-item__price">4500 руб.</div>
+                     </div>
+                     <button class="button button_mini">Купить</button>
+                 </div>
+            </div>
+        </div>
+        <div class="catalog__content">
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content catalog-item__content_active">
+                         <img src="img/puls1.png" alt="pulsometr" class="catalog-item__img">
+                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                         <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list">
+                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                         <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                 <hr>
+                 <div class="catalog-item__footer">
+                     <div class="catalog-item__prices">
+                         <div class="catalog-item__old-price">4750 руб.</div>
+                         <div class="catalog-item__price">4500 руб.</div>
+                     </div>
+                     <button class="button button_mini">Купить</button>
+                 </div>
+            </div>
+            <div class="catalog-item">
+                <div class="catalog-item__wrapper">
+                    <div class="catalog-item__content catalog-item__content_active">
+                         <img src="img/puls1.png" alt="pulsometr" class="catalog-item__img">
+                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                         <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                         <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <ul class="catalog-item__list">
+                         <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                         <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                         <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                         <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                         <a href="#" class="catalog-item__back">назад</a>
+                    </ul>
+                </div>
+                 <hr>
+                 <div class="catalog-item__footer">
+                     <div class="catalog-item__prices">
+                         <div class="catalog-item__old-price">4750 руб.</div>
+                         <div class="catalog-item__price">4500 руб.</div>
+                     </div>
+                     <button class="button button_mini">Купить</button>
+                 </div>
+            </div>
+        </div>
+        </div>
+    </section>
+    
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
